--- a/package.json
+++ b/package.json
@@ -259,9 +259,9 @@
   }
 =======
   },
-  "name": "prettiervscodecomplements",
+  "name": "vscode",
   "description": "![Prettier Banner](https://raw.githubusercontent.com/prettier/prettier-logo/master/images/prettier-banner-light.png)",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "main": "main.js",
   "bin": {
     "prettier-vscode": "prettier.js"
