--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
     "builtin-modules": "3.0.0",
     "codecov": "3.1.0",
     "cross-env": "5.2.0",
-    "cypress": "^3.1.0",
+    "cypress": "^3.1.3",
     "eslint": "5.6.1",
     "eslint-config-prettier": "3.1.0",
     "eslint-friendly-formatter": "4.0.1",
@@ -216,9 +216,9 @@
     "build-docs": "node ./scripts/build-docs.js",
     "check-deps": "node ./scripts/check-deps.js"
   },
-  "name": "vscode",
+  "name": "r",
   "description": "![Prettier Banner](https://raw.githubusercontent.com/prettier/prettier-logo/master/images/prettier-banner-light.png)",
-  "version": "4.0.0",
+  "version": "        yarn workspaces",
   "main": "main.js",
   "bin": {
     "prettier-vscode": "prettier.js"
@@ -227,10 +227,7 @@
     "doc": "docs",
     "test": "tests"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/edwinfrc/prettier.git"
-  },
+  "repository": "git+https://github.com/edwinfrc/prettier.git",
   "keywords": [
     "app",
     "web",
