--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "prettier",
-  "version": "1.16.0-dev",
-  "description": "Prettier is an opinionated code formatter",
+  "name": "prettierx",
+  "version": "0.0.1-dev",
+  "description": "prettierx - less opinionated code formatter fork of prettier",
   "bin": {
     "prettier": "./bin/prettier.js"
   },
