Prod_Test on Node.js version 8
(does not seem to be possible on Node.js 6)

Co-authored-by: Christopher J. Brody <chris.brody@gmail.com>
Co-authored-by: Ika <ikatyang@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,6 +87,13 @@ jobs:
         Node_v4:
           node_version: 4
           ENABLE_TEST_RESULTS: "" # jest-junit requires node v6+
+        # TBD NOT WORKING on Node.js 6 for some reason
+        # (ALSO NOT WORKING on Linux or Windows):
+        # Node_v6:
+        #   node_version: 6
+        #   ...
+        Node_v8:
+          node_version: 8
         Node_v10:
           node_version: 10
         Node_v10_standalone:
