--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@babel/parser": "7.2.0",
     "@glimmer/syntax": "0.30.3",
     "@iarna/toml": "2.0.0",
-    "@typescript-eslint/typescript-estree": "1.1.0",
     "angular-estree-parser": "1.1.5",
     "angular-html-parser": "1.2.0",
     "camelcase": "4.1.0",
@@ -68,6 +67,7 @@
     "semver": "5.4.1",
     "string-width": "3.0.0",
     "typescript": "3.2.2",
+    "typescript-estree": "18.0.0",
     "unicode-regex": "2.0.0",
     "unified": "6.1.6",
     "vnopts": "1.0.2",
