--- a/website/data/languages.yml
+++ b/website/data/languages.yml
@@ -3,25 +3,25 @@
   image: /images/languages/tools_js.svg
   variants:
   - "[JSX](https://facebook.github.io/jsx/)"
-  - "[Flow](https://flow.org/)"
-  - "[TypeScript](https://www.typescriptlang.org/)"
-  - "[JSON](http://json.org/)"
+  - "[Flow](https://flow.org)"
+  - "[TypeScript](https://www.typescriptlang.org)"
+  - "[JSON](http://json.org)"
 - name: HTML
   showName: true
   image: /images/languages/tools_html.svg
   variants:
-  - "[Vue](https://vuejs.org/)"
-  - "[Angular](https://angular.io/)"
+  - "[Vue](https://vuejs.org)"
+  - "[Angular](https://angular.io)"
 - name: CSS
   showName: true
   image: /images/languages/tools_css.svg
   variants:
-  - "[Less](http://lesscss.org/)"
+  - "[Less](http://lesscss.org)"
   - "[SCSS](http://sass-lang.com)"
   - "[`styled-components`](http://styled-components.com) 💅"
   - "[`styled-jsx`](http://npmjs.com/styled-jsx)"
 - name: GraphQL
-  nameLink: http://graphql.org/
+  nameLink: http://graphql.org
   showName: true
   image: /images/languages/tools_gql.svg
   variants:
@@ -30,11 +30,11 @@
   showName: true
   image: /images/languages/tools_md.svg
   variants:
-  - "[CommonMark](http://commonmark.org/)"
+  - "[CommonMark](http://commonmark.org)"
   - "[GitHub-Flavored Markdown](https://github.github.com/gfm/)"
-  - "[MDX](https://mdxjs.com/)"
+  - "[MDX](https://mdxjs.com)"
 - name: YAML
-  nameLink: http://yaml.org/
+  nameLink: http://yaml.org
   showName: true
   image: /images/languages/tools_yaml.svg
   variants: []
