--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prettierx",
-  "version": "0.5.1-dev",
+  "version": "0.6.0",
   "description": "prettierx - less opinionated code formatter fork of prettier",
   "bin": {
     "prettierx": "./bin/prettierx.js"
