--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@angular/compiler": "6.1.10",
-    "@babel/code-frame": "7.0.0-beta.46",
+    "@babel/code-frame": "7.0.0",
     "@babel/parser": "7.2.0",
     "@glimmer/syntax": "0.30.3",
     "@iarna/toml": "2.0.0",
