--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -215,3 +215,9 @@
 - caption: Quip
   image: /images/users/quip.svg
   infoLink: https://quip.com/
+- caption: Salesforce
+  image: /images/users/salesforce.svg
+  infoLink: https://salesforce.com/
+- caption: Heroku
+  image: /images/users/heroku.svg
+  infoLink: https://heroku.com/
