--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,9 +1,2 @@
-# These are supported funding model platforms
-
+github: [duailibe, evilebottnawi]
 tidelift: npm/prettier
-
-# github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-# patreon: # Replace with a single Patreon username
-# open_collective: # Replace with a single Open Collective username
-# ko_fi: # Replace with a single Ko-fi username
-# custom: # Replace with a single custom sponsorship URL
