--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "find-project-root": "1.1.1",
     "flow-parser": "0.84.0",
     "get-stream": "3.0.0",
-    "globby": "9.2.0",
+    "glob-parent": "5.0.0",
     "graphql": "14.2.0",
     "html-element-attributes": "2.0.0",
     "html-styles": "1.0.0",
     "html-tag-names": "1.1.2",
     "ignore": "4.0.6",
     "is-ci": "2.0.0",
+    "is-glob": "4.0.1",
     "jest-docblock": "23.2.0",
     "json-stable-stringify": "1.0.1",
     "leven": "2.1.0",
@@ -56,6 +57,7 @@
     "n-readlines": "1.0.0",
     "normalize-path": "3.0.0",
     "parse-srcset": "ikatyang/parse-srcset#54eb9c1cb21db5c62b4d0e275d7249516df6f0ee",
+    "picomatch": "2.0.7",
     "postcss-less": "1.1.5",
     "postcss-media-query-parser": "0.2.3",
     "postcss-scss": "2.0.0",
