--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cosmiconfig": "5.0.7",
     "dashify": "0.2.2",
     "dedent": "0.7.0",
-    "diff": "3.2.0",
+    "diff-sequences": "24.3.0",
     "editorconfig": "0.15.2",
     "editorconfig-to-prettier": "0.1.1",
     "escape-string-regexp": "1.0.5",
