--- a/package.json
+++ b/package.json
@@ -99,16 +99,16 @@
     "prettier": "1.18.2",
     "prettylint": "1.0.0",
     "rimraf": "2.6.2",
-    "rollup": "0.47.6",
-    "rollup-plugin-alias": "1.4.0",
-    "rollup-plugin-babel": "4.0.0-beta.4",
-    "rollup-plugin-commonjs": "8.2.6",
-    "rollup-plugin-json": "2.1.1",
-    "rollup-plugin-node-builtins": "2.0.0",
-    "rollup-plugin-node-globals": "1.1.0",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-replace": "1.2.1",
-    "rollup-plugin-uglify": "3.0.0",
+    "rollup": "1.14.3",
+    "rollup-plugin-alias": "1.5.2",
+    "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-commonjs": "10.0.0",
+    "rollup-plugin-json": "4.0.0",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-globals": "1.4.0",
+    "rollup-plugin-node-resolve": "5.0.1",
+    "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-terser": "5.0.0",
     "shelljs": "0.8.1",
     "snapshot-diff": "0.4.0",
     "strip-ansi": "4.0.0",
