--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,10 @@
 {
-  "trailingComma": "es5"
+  "overrides": [
+    {
+      "files": "*.js",
+      "options": {
+        "trailingComma": "es5"
+      }
+    }
+  ]
 }
