--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "shelljs": "0.8.3",
     "snapshot-diff": "0.5.1",
     "strip-ansi": "5.2.0",
-    "tempy": "0.3.0",
+    "temp-dir": "2.0.0",
     "webpack": "4.34.0"
   },
   "scripts": {
