revert " replace `tempy` with `temp-dir` (d57257b)"

--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "shelljs": "0.8.3",
     "snapshot-diff": "0.4.0",
     "strip-ansi": "5.2.0",
-    "temp-dir": "2.0.0",
+    "tempy": "0.3.0",
     "webpack": "4.34.0"
   },
   "scripts": {
