Dev test on Linux Node.js 6, 8, and 12

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,11 +38,14 @@ jobs:
       - template: .azure-pipelines/jobs/dev-test.yml
 
   - job: Dev_Test_Linux
-    displayName: Dev Test on Linux Node v10
+    displayName: Dev Test on Linux Node.js
     pool:
       vmImage: "Ubuntu 16.04"
     variables:
+      node_version: 6
+      node_version: 8
       node_version: 10
+      node_version: 12
     steps:
       - template: .azure-pipelines/jobs/dev-test.yml
 
