fixup! Dev test on Linux Node.js 6, 8, and 12

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ jobs:
       - template: .azure-pipelines/jobs/dev-test.yml
 
   - job: Dev_Test_Linux
-    displayName: Dev Test on Linux Node.js
+    displayName: Dev Test on Linux
     pool:
       vmImage: "Ubuntu 16.04"
     strategy:
