[prettierx] some eslint updates
with entries added to .eslintrc.yml & website/.eslintrc.yml

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,6 +13,7 @@ rules:
   import/no-extraneous-dependencies:
   - error
   - devDependencies: ["tests*/**", "scripts/**"]
+  no-control-regex: off
   no-else-return: error
   no-inner-declarations: error
   no-unneeded-ternary: error
