--- a/package.json
+++ b/package.json
@@ -114,6 +114,9 @@
     "tempy": "0.2.1",
     "webpack": "3.12.0"
   },
+  "resolutions": {
+    "fsevents": "1.2.9"
+  },
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
     "prepare-release": "yarn && yarn build && yarn test:dist",
