--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "devDependencies": {
     "@babel/core": "7.2.0",
     "@babel/preset-env": "7.4.5",
+    "@types/globby": "6.1.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
     "builtin-modules": "2.0.0",
