--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@babel/preset-env": "7.4.5",
     "@types/camelcase": "4.1.0",
     "@types/cosmiconfig": "5.0.3",
+    "@types/escape-string-regexp": "1.0.0",
     "@types/find-parent-dir": "0.3.0",
     "@types/get-stream": "3.0.0",
     "@types/globby": "6.1.0",
