--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/get-stream": "3.0.0",
     "@types/globby": "6.1.0",
     "@types/is-ci": "2.0.0",
+    "@types/leven": "2.1.0",
     "@types/lodash.uniqby": "4.7.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
