--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/is-ci": "2.0.0",
     "@types/leven": "2.1.0",
     "@types/lodash.uniqby": "4.7.0",
+    "@types/normalize-path": "3.0.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
     "builtin-modules": "2.0.0",
