restore source code changes

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "json-stable-stringify": "1.0.1",
     "leven": "3.1.0",
     "lines-and-columns": "1.1.6",
-    "linguist-languages": "7.5.1",
+    "linguist-languages": "6.2.1-dev.20180706",
     "lodash.uniqby": "4.7.0",
     "mem": "5.1.0",
     "minimatch": "3.0.4",
@@ -100,21 +100,21 @@
     "prettier": "1.18.2",
     "prettylint": "1.0.0",
     "rimraf": "2.6.3",
-    "rollup": "1.15.6",
+    "rollup": "1.14.3",
     "rollup-plugin-alias": "1.5.2",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-commonjs": "10.0.0",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-globals": "1.4.0",
-    "rollup-plugin-node-resolve": "5.0.3",
+    "rollup-plugin-node-resolve": "5.0.1",
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-terser": "5.0.0",
     "shelljs": "0.8.3",
     "snapshot-diff": "0.4.0",
     "strip-ansi": "5.2.0",
     "tempy": "0.2.1",
-    "webpack": "4.34.0"
+    "webpack": "3.12.0"
   },
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
