--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,18 +94,18 @@ jobs:
   #     - template: .azure-pipelines/jobs/prod-test.yml
 
   - job: Source_Test
-    displayName: Source Test on macOS
+    displayName: Source Test
     pool:
-      vmImage: macos-10.13
+      vmImage: "Ubuntu 16.04"
     strategy:
       matrix:
-        Node_v4:
-          node_version: 4
-          ENABLE_TEST_RESULTS: "" # jest-junit requires node v6+
+        Node_v6:
+          node_version: 6
+        Node_v8:
+          node_version: 8
         Node_v10:
           node_version: 10
-        Node_v10_standalone:
-          node_version: 10
-          TEST_STANDALONE: true
+        Node_v12:
+          node_version: 12
     steps:
       - template: .azure-pipelines/jobs/source-test.yml
