--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,11 +101,11 @@ jobs:
       matrix:
         Node_v6:
           node_version: 6
-        Node_v8:
-          node_version: 8
-        Node_v10:
-          node_version: 10
-        Node_v12:
-          node_version: 12
+        # Node_v8:
+        #   node_version: 8
+        # Node_v10:
+        #   node_version: 10
+        # Node_v12:
+        #   node_version: 12
     steps:
       - template: .azure-pipelines/jobs/source-test.yml
