--- a/package.json
+++ b/package.json
@@ -120,8 +120,8 @@
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
     "prepare-release": "yarn && yarn build && yarn test:dist",
     "test": "jest",
-    "test:dist": "node ./scripts/test-dist.js",
-    "test:source": "node ./scripts/test-source.js",
+    "test:dist": "node ./scripts/test-dist-package.js",
+    "test:dev": "node ./scripts/test-dev-package.js",
     "test-integration": "jest tests_integration",
     "perf-repeat": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
     "perf-repeat-inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
