--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,8 +55,8 @@ jobs:
         # only test on minimum version
         Node_v6:
           node_version: 6
-        # Node_v8:
-        #   node_version: 8
+        Node_v8:
+          node_version: 8
         # Node_v10:
         #   node_version: 10
         # Node_v12:
