--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,8 +57,8 @@ jobs:
           node_version: 6
         Node_v8:
           node_version: 8
-        # Node_v10:
-        #   node_version: 10
+        Node_v10:
+          node_version: 10
         # Node_v12:
         #   node_version: 12
     steps:
