Minify postcss parser

--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "snapshot-diff": "0.4.0",
     "strip-ansi": "4.0.0",
     "tempy": "0.2.1",
+    "terser-webpack-plugin": "1.4.1",
     "webpack": "4.39.1"
   },
   "scripts": {
