Add Campusjäger to users

--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -224,3 +224,6 @@
 - caption: Openbravo
   image: /images/users/openbravo-200x100.png
   infoLink: https://openbravo.com
+- caption: Campusjäger
+  image: /images/users/campusjaeger.svg
+  infoLink: https://campusjaeger.de
