Add R&D to users

--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -227,3 +227,6 @@
 - caption: Campusjäger
   image: /images/users/campusjaeger.svg
   infoLink: https://campusjaeger.de
+- caption: Research & Design
+  image: /images/users/researchanddesign.svg
+  infoLink: https://rd.digital
