--- a/website/package.json
+++ b/website/package.json
@@ -10,24 +10,24 @@
   },
   "dependencies": {
     "clipboard": "2.0.4",
-    "codemirror": "5.36.0",
+    "codemirror": "5.49.0",
     "codemirror-graphql": "0.9.0",
     "lodash.groupby": "4.6.0",
     "lz-string": "1.4.4",
-    "prop-types": "15.6.1",
-    "react": "16.3.1",
+    "prop-types": "15.7.2",
+    "react": "16.10.1",
     "react-dom": "16.10.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.6.2",
+    "@babel/preset-react": "7.0.0",
     "@sandhose/prettier-animated-logo": "1.0.3",
-    "babel-loader": "7.1.4",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
+    "babel-loader": "8.0.6",
     "concurrently": "4.1.2",
-    "docusaurus": "1.6.2",
+    "docusaurus": "1.13.0",
     "js-yaml": "3.13.1",
-    "svgo": "1.0.4",
-    "webpack": "4.29.6",
-    "webpack-cli": "2.0.14"
+    "svgo": "1.3.0",
+    "webpack": "4.41.0",
+    "webpack-cli": "3.3.9"
   }
 }
