--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "resolve": "1.12.0",
     "semver": "6.3.0",
     "string-width": "3.1.0",
-    "typescript": "3.6.3",
+    "typescript": "3.7.0-beta",
     "unicode-regex": "3.0.0",
     "unified": "6.1.6",
     "vnopts": "1.0.2",
