--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@babel/parser": "7.2.0",
     "@glimmer/syntax": "0.41.0",
     "@iarna/toml": "2.2.3",
-    "@typescript-eslint/typescript-estree": "2.3.2",
+    "@typescript-eslint/typescript-estree": "fisker/typescript-estree-for-node-6#19b88dd080213104936d424221b3989c81ddbbb3",
     "angular-estree-parser": "1.1.5",
     "angular-html-parser": "1.2.0",
     "camelcase": "5.3.1",
