--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -230,3 +230,6 @@
 - caption: Research & Design
   image: /images/users/researchanddesign.svg
   infoLink: https://rd.digital
+- caption: Estalee
+  infoLink: https://estalee.com
+
