Added image for Estalee and updates users.yml

--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -230,3 +230,6 @@
 - caption: Research & Design
   image: /images/users/researchanddesign.svg
   infoLink: https://rd.digital
+- caption: Estalee
+  image: /images/users/estalee-200x200.png
+  infoLink: https://estalee.com/
