--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -231,5 +231,5 @@
   image: /images/users/researchanddesign.svg
   infoLink: https://rd.digital
 - caption: Estalee
-  image: /images/users/estalee-200x200.png
+  image: /images/users/estalee.svg
   infoLink: https://estalee.com/
