Added image for Estalee and updates users.yml (#6629)
* Added image for Estalee and updates users.yml

* Update users.yml

* Ran SVGO

* Ran SVGO

--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -233,3 +233,6 @@
 - caption: Build
   image: /images/users/buildcom.svg
   infoLink: https://www.build.com
+- caption: Estalee
+  image: /images/users/estalee.svg
+  infoLink: https://estalee.com/
