--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,43 +8,43 @@ variables:
   ENABLE_CODE_COVERAGE: "" # only enable coverage on the fastest job
 
 jobs:
-  - job: Dev_Lint
-    displayName: Dev Lint on Linux Node v10
-    pool:
-      vmImage: "Ubuntu 16.04"
-    variables:
-      node_version: 10
-    steps:
-      - template: .azure-pipelines/jobs/dev-lint.yml
+  # - job: Dev_Lint
+  #   displayName: Dev Lint on Linux Node v10
+  #   pool:
+  #     vmImage: "Ubuntu 16.04"
+  #   variables:
+  #     node_version: 10
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-lint.yml
 
-  - job: Dev_Test_Windows
-    displayName: Dev Test on Windows Node v10
-    pool:
-      vmImage: vs2017-win2016
-    variables:
-      node_version: 10
-      TEST_CRLF: true
-    steps:
-      - template: .azure-pipelines/jobs/dev-test.yml
+  # - job: Dev_Test_Windows
+  #   displayName: Dev Test on Windows Node v10
+  #   pool:
+  #     vmImage: vs2017-win2016
+  #   variables:
+  #     node_version: 10
+  #     TEST_CRLF: true
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-test.yml
 
-  - job: Dev_Test_macOS
-    displayName: Dev Test on macOS Node v10
-    pool:
-      vmImage: macos-10.13
-    variables:
-      node_version: 10
-      ENABLE_CODE_COVERAGE: true
-    steps:
-      - template: .azure-pipelines/jobs/dev-test.yml
+  # - job: Dev_Test_macOS
+  #   displayName: Dev Test on macOS Node v10
+  #   pool:
+  #     vmImage: macos-10.13
+  #   variables:
+  #     node_version: 10
+  #     ENABLE_CODE_COVERAGE: true
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-test.yml
 
-  - job: Dev_Test_Linux
-    displayName: Dev Test on Linux Node v10
-    pool:
-      vmImage: "Ubuntu 16.04"
-    variables:
-      node_version: 10
-    steps:
-      - template: .azure-pipelines/jobs/dev-test.yml
+  # - job: Dev_Test_Linux
+  #   displayName: Dev Test on Linux Node v10
+  #   pool:
+  #     vmImage: "Ubuntu 16.04"
+  #   variables:
+  #     node_version: 10
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-test.yml
 
   - job: Prod_Build
     displayName: Prod Build on Linux Node v10
