--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "lint-dist": "eslint --no-eslintrc --no-ignore --env=browser \"dist/!(bin-prettier|index|third-party).js\"",
     "build": "node --max-old-space-size=3072 ./scripts/build/build.js",
     "build-docs": "node ./scripts/build-docs.js",
-    "check-deps": "node ./scripts/check-deps.js"
+    "check-deps": "node ./scripts/check-deps.js",
+    "spellcheck": "npx cspell {bin,scripts,src}/**/*.js {docs,website/blog}/**/*.md CHANGELOG.unreleased.md"
   }
 }
