--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
   "devDependencies": {
     "@babel/core": "7.6.3",
     "@babel/preset-env": "7.6.3",
+    "@glimmer/reference": "0.41.4",
+    "@glimmer/runtime": "0.41.4",
     "@simple-dom/interface": "1.4.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
