--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   "devDependencies": {
     "@babel/core": "7.6.3",
     "@babel/preset-env": "7.6.3",
+    "@rollup/plugin-replace": "2.2.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
     "builtin-modules": "3.1.0",
@@ -104,7 +105,6 @@
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-terser": "5.1.2",
     "shelljs": "0.8.3",
     "snapshot-diff": "0.4.0",
