--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/preset-env": "7.6.3",
     "@rollup/plugin-replace": "2.2.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-transform-async-to-promises": "0.8.15",
     "benchmark": "2.1.4",
     "builtin-modules": "3.1.0",
     "codecov": "codecov/codecov-node#e427d900309adb50746a39a50aa7d80071a5ddd0",
