--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "jest-snapshot-serializer-raw": "1.1.0",
     "jest-watch-typeahead": "0.4.0",
     "mkdirp": "0.5.1",
+    "pify": "4.0.1",
     "prettier": "1.18.2",
     "prettylint": "1.0.0",
     "rimraf": "3.0.0",
