--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   "devDependencies": {
     "@babel/core": "7.6.3",
     "@babel/preset-env": "7.6.3",
+    "@rollup/plugin-alias": "2.2.0",
     "@rollup/plugin-replace": "2.2.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
@@ -99,7 +100,6 @@
     "prettylint": "1.0.0",
     "rimraf": "3.0.0",
     "rollup": "1.21.4",
-    "rollup-plugin-alias": "2.0.1",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
