--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "prettier",
+  "private": true,
   "version": "1.18.2",
   "description": "Prettier is an opinionated code formatter",
   "bin": {
@@ -114,7 +115,6 @@
     "webpack": "4.41.0"
   },
   "scripts": {
-    "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
     "prepare-release": "yarn && yarn build && yarn test:dist",
     "test": "jest",
     "test:dist": "node ./scripts/test-dist.js",
