--- a/.azure-pipelines/jobs/dev-lint.yml
+++ b/.azure-pipelines/jobs/dev-lint.yml
@@ -3,6 +3,8 @@ steps:
   - template: ../steps/install-dependencies.yml
   - script: yarn check-deps
     displayName: "Check dependencies"
+  - script: yarn check-types
+    displayName: "Check JSDoc types"
   - script: yarn lint
     displayName: "Lint code"
   - script: yarn lint-docs
