add strict type checking TBD comment to tsconfig.json
Co-Authored-By: Christopher J. Brody <chris@brody.consulting>
Co-Authored-By: Christopher Quadflieg <christopher.quadflieg@adsoul.com>
Co-Authored-By: Georgii Dolzhykov <thorn.mailbox@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es5",
     "module": "commonjs",
     "resolveJsonModule": true,
+    // TBD it is desired to enabled strict type checking at some point:
     "strict": false
   },
   "exclude": [
