--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "find-project-root": "1.1.1",
     "flow-parser": "0.89.0",
     "get-stream": "5.1.0",
+    "glob": "7.1.5",
     "globby": "10.0.1",
     "graphql": "14.5.8",
     "html-element-attributes": "2.2.0",
