--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "shelljs": "0.8.3",
     "snapshot-diff": "0.4.0",
     "strip-ansi": "5.2.0",
+    "synchronous-promise": "2.0.10",
     "tempy": "0.2.1",
     "terser-webpack-plugin": "2.1.3",
     "webpack": "4.41.0"
