--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,43 +8,43 @@ variables:
   ENABLE_CODE_COVERAGE: "" # only enable coverage on the fastest job
 
 jobs:
-  - job: Dev_Lint
-    displayName: Dev Lint on Linux Node v12
-    pool:
-      vmImage: "Ubuntu 16.04"
-    variables:
-      node_version: 12
-    steps:
-      - template: .azure-pipelines/jobs/dev-lint.yml
+  # - job: Dev_Lint
+  #   displayName: Dev Lint on Linux Node v12
+  #   pool:
+  #     vmImage: "Ubuntu 16.04"
+  #   variables:
+  #     node_version: 12
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-lint.yml
 
-  - job: Dev_Test_Windows
-    displayName: Dev Test on Windows Node v12
-    pool:
-      vmImage: vs2017-win2016
-    variables:
-      node_version: 12
-      TEST_CRLF: true
-    steps:
-      - template: .azure-pipelines/jobs/dev-test.yml
+  # - job: Dev_Test_Windows
+  #   displayName: Dev Test on Windows Node v12
+  #   pool:
+  #     vmImage: vs2017-win2016
+  #   variables:
+  #     node_version: 12
+  #     TEST_CRLF: true
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-test.yml
 
-  - job: Dev_Test_macOS
-    displayName: Dev Test on macOS Node v12
-    pool:
-      vmImage: macos-10.13
-    variables:
-      node_version: 12
-      ENABLE_CODE_COVERAGE: true
-    steps:
-      - template: .azure-pipelines/jobs/dev-test.yml
+  # - job: Dev_Test_macOS
+  #   displayName: Dev Test on macOS Node v12
+  #   pool:
+  #     vmImage: macos-10.13
+  #   variables:
+  #     node_version: 12
+  #     ENABLE_CODE_COVERAGE: true
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-test.yml
 
-  - job: Dev_Test_Linux
-    displayName: Dev Test on Linux Node v12
-    pool:
-      vmImage: "Ubuntu 16.04"
-    variables:
-      node_version: 12
-    steps:
-      - template: .azure-pipelines/jobs/dev-test.yml
+  # - job: Dev_Test_Linux
+  #   displayName: Dev Test on Linux Node v12
+  #   pool:
+  #     vmImage: "Ubuntu 16.04"
+  #   variables:
+  #     node_version: 12
+  #   steps:
+  #     - template: .azure-pipelines/jobs/dev-test.yml
 
   - job: Prod_Build
     displayName: Prod Build on Linux Node v12
@@ -85,10 +85,10 @@ jobs:
         Node_v4:
           node_version: 4
           ENABLE_TEST_RESULTS: "" # jest-junit requires node v6+
-        Node_v12:
-          node_version: 12
-        Node_v12_standalone:
-          node_version: 12
-          TEST_STANDALONE: true
+        # Node_v12:
+        #   node_version: 12
+        # Node_v12_standalone:
+        #   node_version: 12
+        #   TEST_STANDALONE: true
     steps:
       - template: .azure-pipelines/jobs/prod-test.yml
