--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "engines": {
     "node": ">=8"
   },
+  "resolutions": {
+    "simple-html-tokenizer": "0.5.7"
+  },
   "dependencies": {
     "@angular/compiler": "8.2.13",
     "@babel/code-frame": "7.5.5",
@@ -66,7 +69,6 @@
     "remark-parse": "5.0.0",
     "resolve": "1.12.0",
     "semver": "6.3.0",
-    "simple-html-tokenizer": "0.5.7",
     "string-width": "4.1.0",
     "typescript": "3.7.2",
     "unicode-regex": "3.0.0",
