--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
   "engines": {
     "node": ">=8"
   },
-  "resolutions": {
-    "simple-html-tokenizer": "0.5.7"
-  },
   "dependencies": {
     "@angular/compiler": "8.2.13",
     "@babel/code-frame": "7.5.5",
     "@babel/parser": "7.7.0",
-    "@glimmer/syntax": "0.43.0",
+    "@glimmer/syntax": "0.44.0",
     "@iarna/toml": "2.2.3",
     "@typescript-eslint/typescript-estree": "2.6.0",
     "angular-estree-parser": "1.1.5",
@@ -69,6 +66,7 @@
     "remark-parse": "5.0.0",
     "resolve": "1.12.0",
     "semver": "6.3.0",
+    "simple-html-tokenizer": "0.5.7",
     "string-width": "4.1.0",
     "typescript": "3.7.2",
     "unicode-regex": "3.0.0",
