Style: use async functions

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,8 @@ extends:
   - eslint:recommended
   - plugin:react/recommended
   - plugin:prettier/recommended
+parserOptions:
+  ecmaVersion: 2017
 plugins:
   - import
 rules:
