Add the XML plugin to the docs

--- a/website/data/languages.yml
+++ b/website/data/languages.yml
@@ -49,3 +49,4 @@
   - "[Ruby](https://github.com/prettier/plugin-ruby)"
   - "[Swift](https://github.com/prettier/plugin-swift)"
   - "[TOML](https://github.com/bd82/toml-tools/tree/master/packages/prettier-plugin-toml)"
+  - "[XML](https://github.com/prettier/plugin-xml)"
