--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,6 +10,7 @@ parserOptions:
   ecmaVersion: 2017
 plugins:
   - import
+  - unicorn
 rules:
   curly: error
   import/no-extraneous-dependencies:
@@ -34,3 +35,4 @@ rules:
     - error
     - never
     - exceptRange: true
+  unicorn/prefer-includes: error
