--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-unicorn": "13.0.0",
     "execa": "3.2.0",
     "jest": "23.3.0",
     "jest-junit": "9.0.0",
