Ignore test files

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,18 @@
 *.log
 /errors
 /test.js
+/test.json
 /test.ts
+/test.tsx
 /test.css
+/test.scss
+/test.less
+/test.html
+/test.vue
+/test.yml
+/test.md
+/test.mdx
+/test.graphql
 /.vscode
 /dist
 /website/node_modules
